# victoriam

./: CMakeLists.txt  Info.plist  library.cpp
PublicCode/VIsual/: VEditorState.hpp
PublicCode/Victoriam/: EngineInfo.hpp
PublicCode/Victoriam/Application/: AAppState.hpp  AAppStateChain.hpp  AAppStateController.hpp  AArgumentLineTool.hpp  ARuntimeApp.hpp  ARuntimeAppCreateInfo.hpp  ARuntimeInstaceCreateInfo.hpp  ARuntimeInstance.hpp  ARuntimeInstanceCreateInfo.hpp  AStartPoint.hpp
PublicCode/Victoriam/Core/: CBase.hpp  CCast.hpp  CFlags.hpp  CFunction.hpp  CLog.hpp  CMacroDefinitions.hpp  CNumerics.hpp  CString.hpp  CUtils.hpp
PublicCode/Victoriam/EventSystem/: EEvent.hpp  EEventDispatcher.hpp  EWindowEvents.hpp
PublicCode/Victoriam/Graphics/: Basics.hpp  GBuffer.hpp  GCamera.hpp  GCmdBufferSolver.hpp  GCommandBufferDrawer.hpp  GDescriptorPool.hpp  GDescriptorSetLayout.hpp  GDescriptorWriter.hpp  GDevice.hpp  GDrawCommandBuffer.hpp  GFramebuffer.hpp  GGeometryData.hpp  GGraphicsContext.hpp  GImage.hpp  GImageView.hpp  GIndexBuffer.hpp  GPicture.hpp  GPipeline.hpp  GRenderPass.hpp  GRenderSubPass.hpp  GRenderSubrender.hpp  GRenderer.hpp  GSwapchain.hpp  GUniformBuffer.hpp  GVertexBuffer.hpp  GWindow.hpp
PublicCode/Victoriam/IO/: IO.hpp  IOFile.hpp  IOInput.hpp  IOKeycode.hpp  IOMousecode.hpp  IOPadaxis.hpp  IOPadcode.hpp  IOStream.hpp
PublicCode/Victoriam/Input/: IInput.hpp  IKeycode.hpp  IMousecode.hpp  IPadaxis.hpp  IPadcode.hpp
PublicCode/Victoriam/Matemia/: MExtent.hpp  MFrustrum.hpp  MFrustum.hpp  MMath.hpp  MMatrix4.hpp  MPlan.hpp  MPlane.hpp  MPoint.hpp  MQuaternion.hpp  MVector2.hpp  MVector3.hpp  MVector4.hpp
PublicCode/Victoriam/Math/: MMatrix4.hpp  MVector2.hpp  MVector3.hpp  MVector4.hpp
PublicCode/Victoriam/Utils/: UCompression.hpp  UCryptogen.hpp  UFile.hpp  UGeometryBuilder.hpp  UGeometryPacker.hpp  UHash.hpp  UJobWorker.hpp  UPathTracker.hpp  UShaderCooker.hpp  UShaderTranslator.hpp  UTimestep.hpp
PublicCode/Victoriam/World/: WGameObject.hpp  WWorld.hpp
SourceCode/: AAppStateChain.cpp  AAppStateController.cpp  ARuntimeApp.cpp  ARuntimeInstance.cpp  Comparator.cpp  EngineInfo.cpp  FuncMatrix4.cpp  FuncVector2.cpp  FuncVector3.cpp  FuncVector4.cpp  GBuffer.cpp  GCamera.cpp  GCmdBufferSolver.cpp  GCommandBufferDrawer.cpp  GDescriptorPool.cpp  GDescriptorPoolCreateInfo.cpp  GDescriptorSetLayout.cpp  GDescriptorSetLayoutCreateInfo.cpp  GDescriptorWriter.cpp  GDevice.cpp  GDrawCommandBuffer.cpp  GFramebuffer.cpp  GGeometryData.cpp  GGraphicsContext.cpp  GImage.cpp  GImageView.cpp  GIndexBuffer.cpp  GLFWWindow.cpp  GLFWWindow.hpp  GPicture.cpp  GPipeline.cpp  GRenderPass.cpp  GRenderSubPass.cpp  GRenderSubrender.cpp  GRenderer.cpp  GSwapchain.cpp  GUniformBuffer.cpp  GVertex.cpp  GVertexBuffer.cpp  GWindow.cpp  (+51 more)
SourceCode/Accessors/: ABuffer.hpp  ACmdBufferSolver.hpp  ACommandBufferDrawer.hpp  ADescriptorPool.hpp  ADescriptorSetLayout.hpp  ADescriptorWriter.hpp  ADevice.hpp  ADrawCommandBuffer.hpp  AFramebuffer.hpp  AGraphicsContext.hpp  AImage.hpp  AIndexBuffer.hpp  APipeline.hpp  ARenderPass.hpp  ASwapchain.hpp  AUniformBuffer.hpp  AVertexBuffer.hpp  AWindow.hpp
SourceCode/Compression/: LZ4Backend.cpp  LZ4Backend.h  UCompression.cpp
SourceCode/Matemia/: AABB.cpp  FrustrumFunctions.cpp  MatrixFunctions.cpp  PlaneFunctions.cpp  QuaternionFunctions.cpp  Random.cpp  Scalar.cpp  Sphere.cpp
SourceCode/RendererSubPasses/: DefaultRenderSubPass.cpp  DefaultRenderSubPass.hpp  PointLightBillboardSubPass.cpp  PointLightBillboardSubPass.hpp
SourceCode/RendererSubrenders/: DefaultRenderSubrender.cpp  DefaultRenderSubrender.hpp  PointLightSubrender.cpp  PointLightSubrender.hpp
SourceCode/VIsual/: VEditorState.cpp  VIsualApp.cpp
SourceCode/Ved/: VEditorState.cpp  VIsualApp.cpp
SourceCode/VulkanBackend/: VulkanCmdBufferSolver.cpp  VulkanCmdBufferSolver.hpp  VulkanDescriptorPool.cpp  VulkanDescriptorPool.hpp  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSetLayout.hpp  VulkanDescriptorWriter.cpp  VulkanDescriptorWriter.hpp  VulkanFramebuffer.cpp  VulkanFramebuffer.hpp  VulkanGraphicsContext.cpp  VulkanGraphicsContext.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanImageView.cpp  VulkanImageView.hpp  VulkanIndexBuffer.cpp  VulkanIndexBuffer.hpp  VulkanMemoryBuffer.cpp  VulkanMemoryBuffer.hpp  VulkanPicture.cpp  VulkanPicture.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanRenderPass.cpp  VulkanRenderPass.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  VulkanUniformBuffer.hpp  VulkanVertex.hpp  VulkanVertexBuffer.cpp  VulkanVertexBuffer.hpp
VISUAL/Resources/Assets/: cassete.mtl  cube.vi3d  monkey.vi3d  quad.vi3d  sphere.vi3d  testcube.glb  vicooker  watertower.vi3d
VISUAL/Resources/Shaders/: .hashsum.Default  .hashsum.PLDefault  Default.shader  Default.sum  PLBillboard.shader  PLDefault.shader  PLDefault.sum  hashsum.Default
brand/: visualed-logo.icns
include/VIsual/: EditorState.hpp
include/Victoriam/: EngineInfo.h  EngineInfo.hpp
include/Victoriam/Application/: AppState.hpp  AppStateController.hpp  ArgumentLineTool.hpp  RuntimeApp.hpp  RuntimeAppCreateInfo.hpp  StartPoint.hpp
include/Victoriam/Core/: Base.h  Base.hpp  Cast.hpp  Flags.hpp  MacroDefinitions.hpp
include/Victoriam/EventSystem/: Event.hpp  EventDispatcher.hpp  KeyboardEvents.hpp  WindowEvents.hpp
include/Victoriam/Graphics/: Basics.hpp  (+10 more)
src/: AppStateController.cpp  Cryptogen.cpp  Device.cpp  DeviceAccessor.hpp  DrawCommandBuffer.cpp  EngineInfo.cpp  File.cpp  FuncVector2.cpp  GLFWWindow.cpp  GLFWWindow.hpp  Input.cpp  Pipeline.cpp  Renderer.cpp  RuntimeApp.cpp  ScalarRsqrt.cpp  ShaderCooker.cpp  Swapchain.cpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanDrawCommandBuffer.cpp  VulkanDrawCommandBuffer.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  Window.cpp  WindowAccessor.hpp  WindowGlfwImpl.cpp  WindowGlfwImpl.hpp
src/Accessors/: ADevice.hpp  ADrawCommandBuffer.hpp  APipeline.hpp  ASwapchain.hpp  AWindow.hpp
src/VIsual/: EditorState.cpp  VIsualApp.cpp
(+82 files in other folders)
